2022-10-20T16:37:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3291363551 # 153
* notice: last 14d: unq all: 1 24
* notice: prev accum: outdated-unq outdated-all / unq all: 57 186 / 69 209
* notice: next accum: outdated-unq outdated-all / unq all: 57 186 / 70 210
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-20]

2022-10-20T02:18:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3286346056 # 151
* notice: last 14d: unq all: 1 23
* notice: prev accum: outdated-unq outdated-all / unq all: 56 185 / 69 209
* notice: next accum: outdated-unq outdated-all / unq all: 57 186 / 69 209
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-05] / []

2022-10-19T16:38:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3283388743 # 150
* notice: last 14d: unq all: 2 24
* notice: prev accum: outdated-unq outdated-all / unq all: 56 185 / 69 208
* notice: next accum: outdated-unq outdated-all / unq all: 56 185 / 69 209
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-19]

2022-10-19T08:39:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3280036684 # 149
* notice: last 14d: unq all: 2 23
* notice: prev accum: outdated-unq outdated-all / unq all: 56 185 / 68 207
* notice: next accum: outdated-unq outdated-all / unq all: 56 185 / 69 208
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-19]

2022-10-19T02:16:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3278320316 # 148