@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-20T16:37:22Z",
+  "timestamp" : "2022-10-21T08:33:17Z",
   "count_outdated" : 186,
   "uniques_outdated" : 57,
-  "count" : 210,
-  "uniques" : 70,
+  "count" : 211,
+  "uniques" : 71,
   "clones" : [
     {
       "timestamp": "2022-10-08T00:00:00Z",
@@ -91,6 +91,13 @@
     },
     {
       "timestamp": "2022-10-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
