@@ -1,3 +1,11 @@
+2022-10-21T08:33:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3295971173 # 155
+* notice: last 14d: unq all: 1 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 57 186 / 70 210
+* notice: next accum: outdated-unq outdated-all / unq all: 57 186 / 71 211
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-21]
+
 2022-10-20T16:37:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3291363551 # 153
 * notice: last 14d: unq all: 1 24
